modal-common-compomponent done

--- a/src/themes/dark-theme.scss
+++ b/src/themes/dark-theme.scss
@@ -1,4 +1,7 @@
 body {
   --background-main: linear-gradient(161.52deg, #2D2D2D 0%, #000000 102.05%);
+
+  --background-modal: #3D4245;
+
   --color-main-font: #fff;
 }
