settings main audio will create

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body {
     display: none !important;
   }
   .accent-bg {
-    background: linear-gradient(180deg, #DC0000 -170.67%, #6F0404 100%);
+    background: linear-gradient(180deg, #DC0000 -170.67%, #6F0404 100%) !important;
   }
 }
 
