--- a/src/themes/dark-theme.scss
+++ b/src/themes/dark-theme.scss
@@ -1,6 +1,6 @@
 body {
   --background-main: linear-gradient(161.52deg, #2D2D2D 0%, #000000 102.05%);
-
+  --background-active: #dc0000;
   --background-modal: #3D4245;
 
   --color-main-font: #fff;
