vct-24-modal-transfers is done

--- a/src/themes/dark-theme.scss
+++ b/src/themes/dark-theme.scss
@@ -2,6 +2,7 @@ body[data-theme='dark'] {
 	--background-main: linear-gradient(161.52deg, #2d2d2d 0%, #000000 102.05%);
 	--background-active: #dc0000;
 	--background-modal: #3d4245;
+	--background-modal-opposite:#3d4245;
 
 	--color-main-font: #fff;
 	--color-main-font-opposite: #101010;
