--- a/src/themes/light-theme.scss
+++ b/src/themes/light-theme.scss
@@ -2,6 +2,7 @@ body[data-theme='light'] {
 	--background-main: linear-gradient(180deg, #f4f4f4, #e8e8e8);
 	--background-active: #dc0000;
 	--background-modal: #3d4245;
+	--background-modal-opposite: #f5f5f5;
 
 	--color-main-font: #000;
 	--color-main-font-opposite: #fff;
