created weather page

--- a/src/themes/dark-theme.scss
+++ b/src/themes/dark-theme.scss
@@ -1,5 +1,6 @@
 body[data-theme='dark'] {
 	--background-main: linear-gradient(161.52deg, #2d2d2d 0%, #000000 102.05%);
+	--background-otherwise-page: linear-gradient(180deg, rgba(255, 255, 255, 0.222) 0%, rgba(255, 255, 255, 0.051) 100%);
 	--background-active: #dc0000;
 	--background-modal: #3d4245;
 	--background-modal-opposite:#3d4245;
