--- a/src/themes/light-theme.scss
+++ b/src/themes/light-theme.scss
@@ -3,6 +3,11 @@ body[data-theme='light'] {
 	--background-active: #dc0000;
 	--background-modal: #3d4245;
 	--background-modal-opposite: #f5f5f5;
+	--background-otherwise-page: linear-gradient(
+		180deg,
+		#ececec 20.39%,
+		#f9f9f9 63.81%
+	);
 
 	--color-main-font: #000;
 	--color-main-font-opposite: #fff;
@@ -18,6 +23,11 @@ body[data-theme='light'] {
 		rgb(234, 234, 234)
 	);
 	--bg-camera-item: rgb(196, 196, 196);
-	--bg-item-bar: linear-gradient(90deg, rgba(73, 73, 73, 0.0001) 0%, #494949 31.77%, #494949 69.79%, rgba(73, 73, 73, 0.0001) 100%);
-
+	--bg-item-bar: linear-gradient(
+		90deg,
+		rgba(73, 73, 73, 0.0001) 0%,
+		#494949 31.77%,
+		#494949 69.79%,
+		rgba(73, 73, 73, 0.0001) 100%
+	);
 }
